// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiFormLabel-colorPrimary css-eh7kgh-MuiFormLabel-root"
      id="slider-label"
    >
      Slider Label
    </label>
    <span
      class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-l8mkx-MuiSlider-root"
    >
      <span
        class="MuiSlider-rail css-7o8aqz-MuiSlider-rail"
      />
      <span
        class="MuiSlider-track css-ttgsjq-MuiSlider-track"
        style="left: 0%; width: 0%;"
      />
      <span
        class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1umila-MuiSlider-thumb"
        data-index="0"
        style="left: 0%;"
      >
        <input
          aria-labelledby="slider-label"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="0"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Slider ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiFormLabel-colorPrimary css-xirtmo-MuiFormLabel-root"
      id="slider-label"
    >
      Slider Label
    </label>
    <span
      class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-l8mkx-MuiSlider-root"
    >
      <span
        class="MuiSlider-rail css-7o8aqz-MuiSlider-rail"
      />
      <span
        class="MuiSlider-track css-ttgsjq-MuiSlider-track"
        style="left: 0%; width: 0%;"
      />
      <span
        class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1umila-MuiSlider-thumb"
        data-index="0"
        style="left: 0%;"
      >
        <input
          aria-labelledby="slider-label"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="0"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Slider ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiFormLabel-colorPrimary css-v6p007-MuiFormLabel-root"
      id="slider-label"
    >
      Slider Label
    </label>
    <span
      class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-u8k93u-MuiSlider-root"
    >
      <span
        class="MuiSlider-rail css-7o8aqz-MuiSlider-rail"
      />
      <span
        class="MuiSlider-track css-ttgsjq-MuiSlider-track"
        style="left: 0%; width: 0%;"
      />
      <span
        class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-bsrsrh-MuiSlider-thumb"
        data-index="0"
        style="left: 0%;"
      >
        <input
          aria-labelledby="slider-label"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="0"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Slider ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiFormLabel-colorPrimary css-19mfh9c-MuiFormLabel-root"
      id="slider-label"
    >
      Slider Label
    </label>
    <span
      class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-u1w4su-MuiSlider-root"
    >
      <span
        class="MuiSlider-rail css-7o8aqz-MuiSlider-rail"
      />
      <span
        class="MuiSlider-track css-ttgsjq-MuiSlider-track"
        style="left: 0%; width: 0%;"
      />
      <span
        class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-7hmojs-MuiSlider-thumb"
        data-index="0"
        style="left: 0%;"
      >
        <input
          aria-labelledby="slider-label"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="0"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Slider ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-jayakb-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiFormLabel-colorPrimary css-1aa9uc6-MuiFormLabel-root"
      id="slider-label"
    >
      Slider Label
    </label>
    <span
      class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-oinj7e-MuiSlider-root"
    >
      <span
        class="MuiSlider-rail css-7o8aqz-MuiSlider-rail"
      />
      <span
        class="MuiSlider-track css-ttgsjq-MuiSlider-track"
        style="left: 0%; width: 0%;"
      />
      <span
        class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-rrb82u-MuiSlider-thumb"
        data-index="0"
        style="left: 0%;"
      >
        <input
          aria-labelledby="slider-label"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="0"
        />
      </span>
    </span>
  </div>
</div>
`;
